hall element H(6,7) fix + hall solar wind equilibrium

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,6 +55,7 @@ set (sources
         equilibria/smod_equil_harris_sheet.f08
         equilibria/smod_equil_tc_pinch.f08
         equilibria/smod_equil_tc_hmri.f08
+        equilibria/smod_equil_solar_wind_tube.f08
         ${USR_SMOD_LOC}/smod_user_defined.f08
         boundaries/mod_boundary_manager.f08
         boundaries/smod_essential_boundaries.f08
