--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -2,9 +2,9 @@ name: regression
 
 on:
   push:
-    branches: [master, develop]
+    branches: [master]
   pull_request:
-    branches: [master, develop]
+    branches: [master]
 
 jobs:
   test:
