--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -2,9 +2,9 @@ name: unit tests
 
 on:
   push:
-    branches: [master, develop]
+    branches: [master]
   pull_request:
-    branches: [master, develop]
+    branches: [master]
 
 jobs:
   test:
